Add stop/start server popup action